--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/sinngjpeg/api-ondas#readme",
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/module-alias": "^2.0.1",
     "@types/node": "16",
@@ -36,5 +37,10 @@
     "ts-jest": "^29.4.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "@overnightjs/core": "^1.7.6",
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0"
   }
 }
