--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "style:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "style:fix": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "test:unit": "jest",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:functional": "jest --projects ./test --forceExit --runInBand"
   },
@@ -26,6 +27,7 @@
   },
   "homepage": "https://github.com/sinngjpeg/api-ondas#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/module-alias": "^2.0.1",
@@ -43,6 +45,7 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
+    "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "express": "^5.1.0"
   }
